--- a/templates/settings/add_user.html
+++ b/templates/settings/add_user.html
@@ -6,6 +6,14 @@
 
 {% block page_title %}Utilisateurs - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script src="{% static "virtual-select/dist/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}" defer></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static 'virtual-select/dist/virtual-select.min.css' %}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid">
         <div class="fr-container">
@@ -60,7 +68,7 @@
                                     {% include "settings/form/select_administration.html" with form_input=form.administration %}
                                 </div>
                                 <div id="select_bailleur" {% if form.user_type.value != 'BAILLEUR' %} hidden {% endif %}>
-                                    {% include "settings/form/select_bailleur.html" with form_input=form.bailleur %}
+                                    {% include "common/form/input_select.html" with form_input=form.bailleur %}
                                 </div>
                             {% else %}
                                 {% if request|is_bailleur %}
@@ -80,6 +88,18 @@
                                     {% include "settings/form/select_administration.html" with form_input=form.administration %}
                                 {% endif %}
                             {% endif %}
+                            <script type="text/javascript" nonce="{{request.csp_nonce}}">
+                                document.addEventListener('DOMContentLoaded', function () {
+                                    VirtualSelect.init({
+                                        ele: '#id_bailleur',
+                                        multiple: false,
+                                        hideClearButton: true,
+                                        search: true,
+                                        searchPlaceholderText: "Rechercher votre bailleur...",
+                                        noSearchResultsText: "Aucun bailleur ne correspond à votre recherche"
+                                    });
+                                });
+                            </script>
                             <button class="fr-btn fr-fi-save-line fr-btn--icon-left fr-mt-3w" type="submit">
                                 Enregistrer
                             </button>
