--- a/templates/settings/add_administration_to_user.html
+++ b/templates/settings/add_administration_to_user.html
@@ -13,13 +13,11 @@
                         <div class="fr-modal__content">
                             <h1 id="fr-modal-title-modal-add-administration" class="fr-modal__title">
                                 <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                Ajouter une administration à l'utilisateur ‹‹{{ form.username.value }}››
+                                Ajouter une administration à l'utilisateur « {{ form.username.value }} »
                             </h1>
                             <form method="post" action="{% url 'settings:edit_user' username=form.username.value %}">
                                 {% csrf_token %}
-
                                 {% include "settings/form/select_administration.html" with form_input=form_add_administration.administration %}
-
                                 <button class="fr-btn" name="action_type", value="add_administration">
                                     Enregistrer
                                 </button>
