--- a/templates/settings/add_bailleur_to_user.html
+++ b/templates/settings/add_bailleur_to_user.html
@@ -13,11 +13,10 @@
                         <div class="fr-modal__content">
                             <h1 id="fr-modal-title-modal-1" class="fr-modal__title">
                                 <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                                Ajouter un bailleur à l'utilisateur ‹‹{{ form.username.value }}››
+                                Ajouter un bailleur à l'utilisateur « {{ form.username.value }} »
                             </h1>
                             <form method="post" action="{% url 'settings:edit_user' username=form.username.value %}">
                                 {% csrf_token %}
-
                                 {% include "settings/form/select_bailleur.html" with form_input=form_add_bailleur.bailleur %}
 
                                 <button class="fr-btn" name="action_type", value="add_bailleur">
