--- a/templates/settings/edit_administration.html
+++ b/templates/settings/edit_administration.html
@@ -12,7 +12,7 @@
                     {% include 'settings/common/side_menu.html' with active_menu='administrations' %}
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
-                    <h3>Modification de l'administration ‹‹{{ form.nom.value }}››</h3>
+                    <h3>Modification de l'administration « {{ form.nom.value }} »</h3>
                     <form method="post" action="">
                         {% csrf_token %}
                         {% include "common/form/input_text.html" with form_input=form.nom  %}
@@ -49,7 +49,7 @@
                         </button>
                     </form>
 
-                    <h3 class="fr-mt-3w">Utilisateurs de l'administration ‹‹{{ form.nom.value }}››</h3>
+                    <h3 class="fr-mt-3w">Utilisateurs de l'administration « {{ form.nom.value }} »</h3>
                     {% include 'settings/user_list.html' with users=paginated_users read_only=True %}
                 </div>
             </div>
