--- a/templates/settings/edit_user.html
+++ b/templates/settings/edit_user.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
                     <div class='fr-col-12'>
-                        <h3>Modification de l'utilisateur ‹‹{{ form.username.value }}››</h3>
+                        <h3>Modification de l'utilisateur « {{ form.username.value }} »</h3>
                         <form method="post" action="">
                             {% csrf_token %}
                             {% include "common/form/input_text.html" with form_input=form.email %}
@@ -29,9 +29,11 @@
                             {% include "common/form/input_text.html" with form_input=form.first_name %}
                             {% include "common/form/input_text.html" with form_input=form.last_name %}
                             {% include "common/form/input_telephone.html" with form_input=form.telephone %}
-                            {% if not request.user.is_superuser and request.user.is_bailleur %}
-                                {% include "common/form/input_multiselect.html" with form_input=form.filtre_departements enum=departements label="Filtrer par departements" label_class="fr-h4" help_text="Les programmes et conventions affichés à l'utilisateur seront filtrés en utilisant la liste des départements ci-dessous" %}
+                            {% if user.is_bailleur %}
+                                {% include "common/form/input_multiselect.html" with form_input=form.filtre_departements label_class="fr-h4" %}
                             {% endif %}
+
+
                             {% include "settings/form/email_preferences.html" with user=user form_input=form.preferences_email %}
                             {% if request.user.is_superuser %}
                                 <h4>Rôles spéciaux</h4>
@@ -136,6 +138,7 @@
 
                     {% if not user.is_instructeur and not user.is_bailleur and request.user.is_superuser %}
                         <div class="fr-mt-3w">
+                            {% comment %} ???? {% endcomment %}
                             {% include 'settings/add_administration_to_user.html' %}
                             {% include 'settings/add_bailleur_to_user.html' %}
                         </div>
