--- a/templates/settings/add_user.html
+++ b/templates/settings/add_user.html
@@ -6,6 +6,14 @@
 
 {% block page_title %}Utilisateurs - APiLos{% endblock%}
 
+{% block javascript_extras %}
+    <script src="{% static "virtual-select/dist/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}" defer></script>
+{% endblock %}
+
+{% block css_extras %}
+    <link rel="stylesheet" href="{% static 'virtual-select/dist/virtual-select.min.css' %}">
+{% endblock %}
+
 {% block content %}
     <div class="fr-container-fluid">
         <div class="fr-container">
