--- a/templates/layout/header_cerbere.html
+++ b/templates/layout/header_cerbere.html
@@ -25,9 +25,9 @@
             {% if not without_action_button %}
                 <div class="fr-header__tools flex_unset">
                     {% if user.is_authenticated %}
-                        <div class="fr-mb-2w">
+                        <div class="fr-mb-1w">
                             <span class="fr-text--sm fr-px-1w">{{ request.user }}</span>
-                            <a class="fr-mt-1w width-100" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
+                            <a class="fr-mt-1w width-100 no-target-blank" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
                                 <span class="fr-fi-question-line fr-mr-1w" aria-hidden="true"></span>
                             </a>
                             <a href="{% url 'settings:profile' %}">
