--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -8,7 +8,6 @@
 
 {% block content %}
     {% with total_conventions=nb_active_conventions|add:nb_completed_conventions %}
-
         {% if total_conventions > 0 %}
 
             <div class="fr-container-fluid ds_banner">
@@ -51,9 +50,14 @@
                 <div class="fr-container-fluid">
                     <div class="fr-tabs fr-col-12">
                         <div class="fr-container">
-                            <ul class="fr-tabs__list" role="tablist" aria-label="list convention">
+                            <ul class="fr-tabs__list" role="tablist" aria-label="Liste des conventions">
                                 {% include 'conventions/home/_tab.html' with tab_active=active count=nb_active_conventions label='en cours' title='Conventions en cours' route='conventions:search_active' %}
                                 {% include 'conventions/home/_tab.html' with tab_active=active|negate count=nb_completed_conventions label='finalisées' title='Conventions finalisées' route='conventions:search_completed' %}
+                                <li class="fr-ml-md-auto">
+                                    <a class="fr-tabs__tab" href="{% url 'conventions:loyer_simulateur' %}" title="Calculatrice de loyers" aria-selected="false">
+                                        <span class="fr-link"><span aria-hidden="true" class="fr-icon-equalizer-fill"></span> Calculatrice de loyers</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
