--- a/templates/conventions/loyer.html
+++ b/templates/conventions/loyer.html
@@ -98,25 +98,23 @@
                     </button>
 
                 </form>
-
             </div>
 
-            <div class="fr-col-12">
-                <div>
-                    <ul>
-                        <li>
-                            <span>Résultat</span>
-                        </li>
-                        <li>
-                            <span>Montant actualisé</span><br/>
-                            <strong>{{ montant_actualise|floatformat:2 }} €</strong>
-                        </li>
-                        <li>
-                            <span>Période de validité</span><br/>
-                            <p>Du 1er janvier 2022 au 31 décembre 2022</p>
-                        </li>
-                    </ul>
-                </div>
+            <div class="fr-col-md-6 apilos-recap fr-mt-2w">
+                <ul>
+                    <li>
+                        <span class="fr-text--bold apilos-text-blue-sun">Résultat</span>
+                    </li>
+                    <li>
+                        <span class="fr-text--bold">Montant actualisé</span><br/>
+                        <span class="fr-display-md">{% if montant_actualise %}{{ montant_actualise|floatformat:2 }} €{% endif %}</span>
+
+                    </li>
+                    <li>
+                        <span class="fr-text--bold">Période de validité</span><br/>
+                        <p>{% if annee_validite %}Du 1er janvier {{ annee_validite }} au 31 décembre {{ annee_validite }}{% endif %}</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
