--- a/templates/conventions/recapitulatif/pieces_jointes.html
+++ b/templates/conventions/recapitulatif/pieces_jointes.html
@@ -32,18 +32,18 @@
                                     <td>{{ piece_jointe.cree_le }}</td>
                                     <td>
                                         <a class="fr-btn fr-btn--sm fr-icon-download-fill"
-                                           title="Consulter"
-                                           download="{{ piece_jointe.nom_reel }}"
-                                           href="{% url 'conventions:piece_jointe' piece_jointe_uuid=piece_jointe.uuid %}"
+                                            title="Consulter"
+                                            download="{{ piece_jointe.nom_reel }}"
+                                            href="{% url 'conventions:piece_jointe' piece_jointe_uuid=piece_jointe.uuid %}"
                                         >Consulter</a>
-                                        {% if piece_jointe.type == 'CONVENTION' %}
+                                        {% if piece_jointe|can_promote %}
                                             <a class="fr-btn fr-btn--green fr-btn--sm fr-icon-checkbox-circle-fill"
-                                               title="Définir comme document de convention"
-                                               href="{% url 'conventions:piece_jointe_promote' piece_jointe_uuid=piece_jointe.uuid %}"
+                                                title="Définir comme document de convention"
+                                                href="{% url 'conventions:piece_jointe_promote' piece_jointe_uuid=piece_jointe.uuid %}"
                                             >Définir comme document de convention</a>
                                         {% endif %}
                                     </td>
-                            </tr>
+                                </tr>
                             {% endfor %}
                         </tbody>
                     </table>
