--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -40,11 +40,11 @@
 
                         {% include "common/form/input_upload.html" with form_input=form.edd_volumetrique form_input_files=form.edd_volumetrique_files object_name='lot' object_uuid=convention.lot.uuid textarea=True image_only=True file_list=convention.lot.edd_volumetrique|get_files_from_textfiles object_field="lot__edd_volumetrique__"|add:form.lot_uuid.value %}
 
-                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_volumetrique object_field="programme__mention_publication_edd_volumetrique__"|add:form.uuid.value %}
+                        {% include "common/form/input_textarea.html" with form_input=form.mention_publication_edd_volumetrique object_field="programme__mention_publication_edd_volumetrique__"|add:form.uuid.value %}
 
                         {% include "common/form/input_upload.html" with form_input=form.edd_classique form_input_files=form.edd_classique_files object_name='lot' object_uuid=convention.lot.uuid textarea=True image_only=True file_list=convention.lot.edd_classique|get_files_from_textfiles object_field="lot__edd_classique__"|add:form.lot_uuid.value %}
 
-                        {% include "common/form/input_text.html" with form_input=form.mention_publication_edd_classique object_field="programme__mention_publication_edd_classique__"|add:form.uuid.value %}
+                        {% include "common/form/input_textarea.html" with form_input=form.mention_publication_edd_classique object_field="programme__mention_publication_edd_classique__"|add:form.uuid.value %}
 
                         <h4 class="fr-mb-1w">EDD Simplifié</h4>
                         <p class="fr-text--xs notes fr-mb-1w">
