Add verbosity to Celery logs

--- a/templates/conventions/loyer.html
+++ b/templates/conventions/loyer.html
@@ -84,7 +84,7 @@
                             </div>
 
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                {% include "common/form/input_number.html" with form_input=form.montant editable=True %}
+                                {% include "common/form/input_number.html" with form_input=form.montant editable=True step=".01" %}
                             </div>
 
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
