trying fix bug sonarCloud :)

--- a/templates/layout/popup.html
+++ b/templates/layout/popup.html
@@ -6,7 +6,7 @@
                 <div class="fr-col-12 fr-col-md-8 fr-col-lg-6">
                     <div class="fr-modal__body">
                         <div class="fr-modal__header fr-grid-row--center">
-                            <img class="fr-col-6" src="{% static 'img/data-rafiki.svg' %}">
+                            <img class="fr-col-6" src="{% static 'img/data-rafiki.svg' %}" alt="popup-illustration">
                         </div>
                         <div class="fr-modal__content">
                             <h1 id="fr-modal-popup-title" class="fr-modal__title">
