Mise en place du bandeau d'avertissement de prochaine migration vers le SIAP

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -957,3 +957,6 @@ button:not(:disabled).apilos-btn--secondary--red:hover {
 .apilos-text-blue-sun {
   color: #000091;
 }
+.apilos-warning-band {
+  background: #FEF4EF;
+}
