fix sonarCloud error

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -30,7 +30,7 @@
             <div>
                 <p class="fr-mb-0 fr-text--lead">Le SIAP sera prochainement votre unique porte d’entrée vers APiLos !</p>
                 <p class="fr-mb-0">Vous pourrez retrouver Apilos en vous connectant depuis le SIAP.
-                    <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/passage-vers-le-siap/passage-au-siap" target="_blank">En savoir plus</a>
+                    <a class="fr-link" href="https://docs.apilos.beta.gouv.fr/passage-vers-le-siap/passage-au-siap" target="_blank"  rel="noopener">En savoir plus</a>
 
                 </p>
             </div>
