--- a/templates/conventions/avenant/complete_form_for_avenants.html
+++ b/templates/conventions/avenant/complete_form_for_avenants.html
@@ -1,29 +1,22 @@
-{% load custom_filters %}
-
-<div>
-    <p class="fr-alert__title">Valider l'avenant</p>
-    <p class="fr-mb-0">
-        {% if not convention.parent.programme.ville or not convention.parent.lot.nb_logements or not convention.parent.nom_fichier_signe %}
-            Pour pouvoir valider cet avenant, vous devez remplir les informations suivantes concernant la convention originale.
-            <form method="post"  action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
-                {% csrf_token %}
-                <input id="completeform" type="hidden" name="completeform" value="true">
-                <div class="fr-grid-row fr-grid-row--gutters fr-mt-3w">
-
-                    {% if not convention.parent.programme.ville %}
-                        <div class="fr-col-12 fr-col-md-6">
-                            {% include "common/form/input_text.html" with form_input=complete_for_avenant_form.ville editable=True %}
-                        </div>
-                    {% endif %}
-                    {% if not convention.parent.lot.nb_logements %}
-                        <div class="fr-col-12 fr-col-md-6">
-                            {% include "common/form/input_number.html" with form_input=complete_for_avenant_form.nb_logements editable=True %}
-                        </div>
-                    {% endif %}
+<p class="fr-alert__title">Valider l'avenant</p>
+{% if not convention.parent.programme.ville or not convention.parent.lot.nb_logements or not convention.parent.nom_fichier_signe %}
+    <p class="fr-mb-0">Pour pouvoir valider cet avenant, vous devez remplir les informations suivantes concernant la convention originale.</p>
+    <form method="post"  action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false"  enctype="multipart/form-data">
+        {% csrf_token %}
+        <input id="completeform" type="hidden" name="completeform" value="true">
+        <div class="block--row-strech fr-mt-2w">
+            <div class="block--row-strech-1 fr-mr-5w">
+                <div class="fr-grid-row fr-grid-row--gutters">
+                    <div class="fr-col-12 fr-col-md-6" {% if convention.parent.programme.ville %}hidden{% endif %}>
+                        {% include "common/form/input_text.html" with form_input=complete_for_avenant_form.ville editable=True %}
+                    </div>
+                    <div class="fr-col-12 fr-col-md-4" {% if convention.parent.lot.nb_logements %}{% endif %}>
+                        {% include "common/form/input_number.html" with form_input=complete_for_avenant_form.nb_logements editable=True %}
+                    </div>
                     {% if not convention.parent.nom_fichier_signe %}
                         <div class="fr-col-12">
-                            <div class="fr-upload-group fr-my-4w">
-                                <label class="fr-label" for="file-upload">Téléverser la convention (en PDF)
+                            <div class="fr-upload-group">
+                                <label class="fr-label" for="file-upload">Téléverser la convention initiale (en PDF)
                                     <span class="fr-hint-text">Taille maximale : 500 Mo. Formats supportés : pdf</span>
                                 </label>
                                 <input class="fr-upload" type="file" id="file-upload" name="nom_fichier_signe">
@@ -31,32 +24,32 @@
                         </div>
                     {% endif %}
                 </div>
-                <button>Envoyer</button>
+            </div>
+            <button class="fr-btn fr-btn--secondary">Envoyer</button>
+        </div>
+    </form>
+{% else %}
+    {% if convention.numero %}
+        <p class="fr-mb-0">L'avenant aura le numéro {{ convention.numero }}</p>
+    {% else %}
+        <div class="fr-col-md-12 block--row-strech">
+            <div class="block--row-strech-1 fr-mr-6w">
+                <p class="fr-alert__title">Valider l'avenant</p>
+                <p class="fr-mb-0">L'avenant aura le numéro {{conventionNumberForm.convention_numero.value}}.</p>
+            </div>
+            <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
+                {% csrf_token %}
+                <input type="hidden"
+                    id="{{conventionNumberForm.convention_numero.id_for_label}}"
+                    name="{{conventionNumberForm.convention_numero.html_name}}"
+                    value="{{conventionNumberForm.convention_numero.value}}">
+                <button class="fr-btn fr-btn--secondary">
+                    Valider l'avenant
+                </button>
             </form>
-        {% else %}
-            {% if convention.numero %}
-                <p class="fr-mb-0">L'avenant aura le numéro {{ convention.numero }}</p>
-            {% else %}
-                <div class="fr-col-md-12 block--row-strech">
-                    <div class="block--row-strech-1 fr-mr-6w">
-                        <p class="fr-alert__title">Valider l'avenant</p>
-                        <p class="fr-mb-0">L'avenant aura le numéro {{conventionNumberForm.convention_numero.value}}.</p>
-                    </div>
-                    <form method="post" action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false">
-                        {% csrf_token %}
-                        <input type="hidden"
-                            id="{{conventionNumberForm.convention_numero.id_for_label}}"
-                            name="{{conventionNumberForm.convention_numero.html_name}}"
-                            value="{{conventionNumberForm.convention_numero.value}}">
-                        <button class="fr-btn fr-btn--secondary">
-                            Valider l'avenant
-                        </button>
-                    </form>
-                </div>
-            {% endif %}
-        {% endif %}
-    </p>
-</div>
+        </div>
+    {% endif %}
+{% endif %}
 
 
 
