--- a/templates/common/form/input_search_select.html
+++ b/templates/common/form/input_search_select.html
@@ -7,33 +7,38 @@
         </label>
     {% endif %}
 
-    <div class="fr-mt-1w block--row-strech" id="{{ form_input.id_for_label }}_div"></code>
-    <select
-        class="fr-select {% if form_input.errors %}fr-select--error{% endif %}"
-        id="{{ form_input.id_for_label }}"
-        name="{{ form_input.html_name }}"
-        {% include "common/form/disable_form_input.html" %}>
-        {% if form_input.field.instance %}
-            <option value="{{ form_input.field.instance.uuid }}" selected>{{ form_input.field.instance }}</option>
-        {% endif %}
-    </select>
-    {% include "common/utils/comments_field.html" %}
-</div>
-<script type="text/javascript" nonce="{{request.csp_nonce}}">
-    VirtualSelect.init({
-        ele: '#{{form_input.id_for_label}}',
-        search: true,
-        onServerSearch: function (search, select) {
-            fetch('{% url 'users:search_bailleur' %}?q=' + search)
-                .then((response) => response.json())
-                .then(data => select.setServerOptions(data));
-        },
-    });
-</script>
-
-{% for error in form_input.errors %}
-    <p id="select-error-desc-error" class="fr-error-text">
-        {{ error }}
-    </p>
-{% endfor %}
+    <div class="fr-mt-1w block--row-strech" id="{{ form_input.id_for_label }}_div">
+        <select
+            class="fr-select {% if form_input.errors %}fr-select--error{% endif %}"
+            id="{{ form_input.id_for_label }}"
+            name="{{ form_input.html_name }}"
+            {% include "common/form/disable_form_input.html" %}>
+            {% if form_input.field.instance %}
+                <option value="{{ form_input.field.instance.uuid }}" selected>{{ form_input.field.instance }}</option>
+            {% elif queryset %}
+                {% for element in queryset %}
+                    <option value="{{ element|attribute:field }}">
+                        {{ element }}
+                    </option>
+                {% endfor %}
+            {% endif %}
+        </select>
+        {% include "common/utils/comments_field.html" %}
+    </div>
+    <script type="text/javascript" nonce="{{request.csp_nonce}}">
+        VirtualSelect.init({
+            ele: '#{{form_input.id_for_label}}',
+            search: true,
+            onServerSearch: function (search, select) {
+                fetch('{% url 'users:search_bailleur' %}?q=' + search)
+                    .then((response) => response.json())
+                    .then(data => select.setServerOptions(data));
+            },
+        });
+    </script>
+    {% for error in form_input.errors %}
+        <p id="select-error-desc-error" class="fr-error-text">
+            {{ error }}
+        </p>
+    {% endfor %}
 </div>
