--- a/templates/operations/conventions.html
+++ b/templates/operations/conventions.html
@@ -14,6 +14,8 @@
     <div class="fr-container">
         <div class="fr-grid-row fr-grid-row--gutters">
             <div class="fr-my-5w fr-table fr-table--bordered table--layout-fixed">
+                {% include "conventions/convention_list.html" %}
+
                 <table>
                     <caption><em>{{ conventions|length }} convention{{ conventions|length|pluralize }} associée{{ conventions|length|pluralize }}</em></caption>
                     <thead>
