--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -27,7 +27,8 @@
                         {% csrf_token %}
                         <div class="fr-col-12">
                             <div class="fr-mb-3w">
-                                {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.field %}
+                                {% url 'users:search_bailleur' as search_bailleur_url %}
+                                {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.to_field_name url=search_bailleur_url %}
                             </div>
 
                             {% include "common/form/input_select.html" with form_input=form.administration without_empty_option=form.administration.field.choices|length_is:1 %}
