--- a/templates/settings/add_user.html
+++ b/templates/settings/add_user.html
@@ -7,7 +7,7 @@
 {% block page_title %}Utilisateurs - APiLos{% endblock%}
 
 {% block javascript_extras %}
-    <script src="{% static "virtual-select/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}" defer></script>
+    <script src="{% static "virtual-select/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}"></script>
 {% endblock %}
 
 {% block css_extras %}
@@ -68,7 +68,8 @@
                                     {% include "settings/form/select_administration.html" with form_input=form.administration %}
                                 </div>
                                 <div id="select_bailleur" {% if form.user_type.value != 'BAILLEUR' %} hidden {% endif %}>
-                                    {% include "settings/form/select_bailleur.html" with form_input=form.bailleur %}
+                                    {% url 'users:search_bailleur' as search_bailleur_url %}
+                                    {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.to_field_name url=search_bailleur_url %}
                                 </div>
                             {% else %}
                                 {% if request|is_bailleur %}
@@ -77,7 +78,8 @@
                                         id="{{form.user_type.id_for_label}}"
                                         name="{{form.user_type.html_name}}"
                                         value="BAILLEUR">
-                                    {% include "settings/form/select_bailleur.html" with form_input=form.bailleur%}
+                                    {% url 'users:search_bailleur' as search_bailleur_url %}
+                                    {% include "common/form/input_search_select.html" with form_input=form.bailleur queryset=form.bailleur.field.queryset field=form.bailleur.field.to_field_name url=search_bailleur_url %}
                                 {% endif %}
                                 {% if request|is_instructeur %}
                                     <input
